--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 ################################################################################
 
 /.vs
+/JquerySPA/bin
+/JquerySPA/obj/Debug
+/packages
